fix some bugs and apply new features